# infimum

./: .gitignore  Dockerfile  LICENSE  README.md  Vagrantfile  docker-compose.yml
.dev/: Cargo.toml  Dockerfile.base  Dockerfile.frontend  Dockerfile.node
.dev/runtime/: Cargo.toml
.dev/runtime/src/: lib.rs
.github/: CODEOWNERS
.github/workflows/: ci.yml
circuits/: README.md  main-process.circom  main-tally.circom  main.circom  process-messages.circom  tally-votes.circom
circuits/utils/: babyjub.circom  bitify.circom  comparators.circom  escalarmulany.circom  escalarmulfix.circom  incremental-merkle-tree.circom  incremental-quinary-tree.circom  message-validator.circom  mux1.circom  pointbits.circom  poseidon-cipher.circom  poseidon-util.circom  safe-comparators.circom  state-leaf-and-ballot-transformer.circom  unpack-element.circom
cli/: README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
cli/__tests__/: e2e.test.ts
cli/__tests__/data/: process.wasm  tally.wasm  vk-process.json  vk-tally.json
cli/lib/: Cargo.toml
cli/lib/pkg/: README.md  inf_lib.d.ts  inf_lib.js  inf_lib_bg.wasm  inf_lib_bg.wasm.d.ts  package.json
cli/lib/src/: lib.rs
cli/src/: extrinsic.ts  index.ts  interface.ts  serialize.ts  utils.ts
cli/src/user/: coordinator.ts  index.ts  participant.ts  user.ts
node/: Cargo.toml
pallet/: Cargo.toml  README.md
pallet/src/: benchmarking.rs  constants.rs  lib.rs  mock.rs  tests.rs  types.rs  verify.rs
pallet/src/hash/: mod.rs  parameters.rs  poseidon.rs
pallet/src/poll/: config.rs  coordinator.rs  keys.rs  mod.rs  poll.rs  provider.rs  state.rs  zeroes.rs
pallet/src/tests/: data.rs  extrinsics.rs  mod.rs  poseidon.rs  utils.rs
pallets/template/: Cargo.toml
pallets/template/src/: deserialization.rs  lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
