[package]
name = "pallet-infimum"
version = "4.0.0-dev"
description = "Collusion resistant zero-knowledge voting apparatus."
authors = ["Rhys Balevicius <https://github.com/rhysbalevicius>"]
homepage = "https://rhys.tech"
edition = "2021"
license = "MIT"
publish = false
repository = "https://github.com/rhysbalevicius/infimum/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
bls12_381 = "0.7.0"
pairing = "0.22.0"
group = "0.12.1"
serde = { version = "1.0.149", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.89", default-features = false, features = ["alloc"]}
uint = { version = "0.8", default-features = false }
sp-std = { version = "14.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git" }
sp-io = { version = "23.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-runtime = { version = "24.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
dusk-poseidon = { version = "0.33.0", default-features = false }
dusk-bls12_381 = { version = "0.13", default-features = false }

[dev-dependencies]
sp-core = { version = "21.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
