[package]
name = "inf-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.95"
ark-bn254 = { version = "0.4.0", default-features = false, features = ["curve"] }
ark-ff = { version = "0.4.2", default-features = false }
ark-serialize = "0.4.2"
ark-groth16 = { version = "0.4.0", default-features = false }
ark-crypto-primitives = { version = "0.4.0", default-features = false, features = ["snark"] }
serde = { version = "1.0.214", features = ["derive"], default-features = false }
serde-wasm-bindgen = "0.4"
num-bigint = { version = "0.4.3", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
sp-std = { version = "14.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk.git" }
